--- a/src/templates_s3/templator_s3.org
+++ b/src/templates_s3/templator_s3.org
@@ -121,22 +121,61 @@ trexio_exit_code trexio_s3_deinit(trexio_t* const file);
 trexio_exit_code trexio_s3_flush(trexio_t* const file);
     #+end_src
 
+    To check that the TREXIO file exists, we need to check if there is
+    a key with the file name as prefix. As all TREXIO files contain
+    metadata, we check for the =metadata.txt= file.
+    
+    #+begin_src c :tangle basic_s3.c
+static int file_exists(trexio_s3_client* client, const char* file_name)
+{
+      assert(client != NULL);
+      assert(file_name != NULL);
+
+      const char * metadata_txt = "/metadata.txt";
+
+      size_t len = strlen(file_name) + 1; // Size of file_name + NULL char
+      size_t len2 = len+strlen(metadata_txt);  // Size of file_name + "/metadata.txt" + NULL char
+
+      // Temporary string for file_name + "/metadata.txt"
+      char *key = malloc(sizeof(char) * len2);
+      if (key == NULL) {
+        return TREXIO_ALLOCATION_FAILED;
+      }
+      memcpy(key, file_name, len);
+      key = strncat(key, metadata_txt, len2);
+
+      int exists = s3_file_exists(client, key, strlen(key));
+
+      FREE(key);
+
+      return exists;
+
+}
+    #+end_src
+
     #+begin_src c :tangle basic_s3.c
 trexio_exit_code
 trexio_s3_inquire (const char* file_name)
 {
- /* Check if the file with "file_name" exists and that it is a directory */
-  /* Check if a logical directory (prefix) exists on S3 by checking for any object under that prefix.*/
       if(file_name==NULL){
         return TREXIO_INVALID_ARG_1;
       }
+
+      // Connect to S3
       trexio_s3_client* client=s3_connect();
       if(client==NULL){
-        return TREXIO_FAILURE; //Connexion echec
+        return TREXIO_OPEN_ERROR;
       }
-      int file_exists = s3_file_exists(client, file_name, strlen(file_name));
+
+      int exists = file_exists(client, file_name);
+
       s3_disconnect(client);
-      return file_exists == 0 ? TREXIO_SUCCESS : TREXIO_FAILURE;
+
+      if (exists == 0) {
+        return TREXIO_SUCCESS;
+      } else {
+        return TREXIO_FAILURE;
+      }
 
 }
     #+end_src
@@ -152,21 +191,20 @@ trexio_s3_init (trexio_t* const file)
 
   /* Put all pointers to NULL but leave parent untouched */
   memset(&(f->parent)+1,0,sizeof(trexio_s3_t)-sizeof(trexio_t));
- f->client=s3_connect();
-  if(f->client==NULL) return TREXIO_FAILURE;
 
+  f->client=s3_connect();
+  if(f->client==NULL) return TREXIO_FAILURE;
+  
   const char* file_name = file->file_name;
   /* Check if the file (prefix) exists in the S3 bucket */
-  int exist;
-  exist = s3_file_exists(f->client, file_name, strlen(file_name));
+  int exists = file_exists(f->client, file_name);
 
  /* If file does not exist - create it in write mode */
-  if(!exist && file->mode == 'r') {
+  if( (exists != 0) && (file->mode == 'r') ) {
         s3_disconnect(f->client);
         return TREXIO_OPEN_ERROR;
-     }
-//si le mode est écriture, on peut continuer (création différée)
-  fprintf(stderr, "[TREXIO_S3]%s:initialisation\n", __func__);
+  }
+
   return TREXIO_SUCCESS;
 }
     #+end_src
@@ -201,7 +239,7 @@ trexio_s3_deinit (trexio_t* const file)
 
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
- trexio_s3_t* const f=(trexio_s3_t*)file;
+  trexio_s3_t* const f=(trexio_s3_t*)file;
 
   trexio_exit_code rc=TREXIO_SUCCESS;
 
@@ -230,8 +268,8 @@ trexio_s3_flush (trexio_t* const file)
   trexio_s3_t* f = (trexio_s3_t*) file;
   trexio_exit_code rc;
   rc = trexio_s3_flush_$group$(f);   //Cette fonction va appeler s3_put()
-  if (rc != TREXIO_SUCCESS) return rc;
   printf("rc:%d (%s)\n",rc, trexio_string_of_error(rc));
+  if (rc != TREXIO_SUCCESS) return rc;
 
   return TREXIO_SUCCESS;
 }
@@ -275,24 +313,22 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
   }
 
   /* If the file exists, read it */
- /* Find size of file to allocate the max size of the string buffer */
+  /* Find size of file to allocate the max size of the string buffer */
 
-    size_t sz=s3_size(file->client, $group$->file_name, strlen($group$->file_name));
-    if(sz == 0){
-        FREE($group$);
-        return NULL;
-    }
-
+  int64_t sz=s3_size(file->client, $group$->file_name, strlen($group$->file_name));
+  if(sz > 0){
+    
     char* f=CALLOC(sz+1, char);  //+1 pour null-terminate si texte
     if(f==NULL){
-        FREE($group$);
-        return NULL;
-
+      FREE($group$);
+      return NULL;
+    }
+    
     int rc=s3_get(file->client, $group$->file_name, strlen($group$->file_name), f, sz);
     if(rc != 0){
-        FREE(f);
-        FREE($group$);
-        return NULL;
+      FREE(f);
+      FREE($group$);
+      return NULL;
     }
 
     sz = (sz < 1024) ? (1024) : (sz);
@@ -302,11 +338,6 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
       FREE($group$);
       return NULL;
     }
-
-   // int rc = 0;
-  //  (void) rc;  // Avoid unused variable;
-  //  trexio_exit_code rc_free = TREXIO_FAILURE;
-   // (void) rc_free;  // Avoid unused variable;
 
     /* workaround for the case of missing blocks in the file */
     // START REPEAT GROUP_DSET_ALL
@@ -318,17 +349,17 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
 
       if (strcmp(buffer, "EXIT") == 0) {
         break;
-      // START REPEAT GROUP_DSET_ALL
+        // START REPEAT GROUP_DSET_ALL
       } else if (strcmp(buffer, "rank_$group_dset$") == 0) {
-          line+=strcspn(line,"\n")+1;
+        line+=strcspn(line,"\n")+1;
         rc = sscanf(line, "%u", &($group$->rank_$group_dset$));
         if (rc != 1) {
           trexio_s3_free_read_$group$(buffer, f, file, $group$);
           return NULL;
         }
-
+        
         if ($group$->rank_$group_dset$ != 0) size_$group_dset$ = 1UL;
-
+        
         for (uint32_t i=0; i<$group$->rank_$group_dset$; ++i){
           line+=strcspn(line,"\n")+1;
           uint32_t j=0;
@@ -344,20 +375,20 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
             trexio_s3_free_read_$group$(buffer, f, file, $group$);
             return NULL;
           }
-
+          
           size_$group_dset$ *= $group$->dims_$group_dset$[i];
         }
-      // END REPEAT GROUP_DSET_ALL
-      // START REPEAT GROUP_DSET_NUM
+        // END REPEAT GROUP_DSET_ALL
+        // START REPEAT GROUP_DSET_NUM
       } else if (strcmp(buffer, "$group_dset$") == 0) {
-
+        
         /* Allocate arrays */
         $group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
         if ($group$->$group_dset$ == NULL) {
           trexio_s3_free_read_$group$(buffer, f, file, $group$);
           return NULL;
         }
-
+        
         for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
           line+=strcspn(line,"\n")+1;
           rc = sscanf(line, "%$group_dset_format_scanf$", &($group$->$group_dset$[i]));
@@ -366,45 +397,45 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
             return NULL;
           }
         }
-
-      // END REPEAT GROUP_DSET_NUM
-      // START REPEAT GROUP_DSET_STR
+        
+        // END REPEAT GROUP_DSET_NUM
+        // START REPEAT GROUP_DSET_STR
       } else if (strcmp(buffer, "$group_dset$") == 0) {
-          line+=strcspn(line,"\n")+1;
-          if (size_$group_dset$ != 0) {
-             /* Allocate arrays */
-               $group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
-               if ($group$->$group_dset$ == NULL) {
-                   trexio_s3_free_read_$group$(buffer, f, file, $group$);
-                   return NULL;
-               }   
-
+        line+=strcspn(line,"\n")+1;
+        if (size_$group_dset$ != 0) {
+          /* Allocate arrays */
+          $group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
+          if ($group$->$group_dset$ == NULL) {
+            trexio_s3_free_read_$group$(buffer, f, file, $group$);
+            return NULL;
+          }   
+          
           /* WARNING: this tmp array allows to avoid allocation of space for each element of array of string
            ,* BUT it's size has to be number_of_str*max_len_str where max_len_str is somewhat arbitrary, e.g. 32.
            ,*/
-             char* tmp_$group_dset$;
-             tmp_$group_dset$ = CALLOC(size_$group_dset$*32, char);
-
-             for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
-                  $group$->$group_dset$[i] = tmp_$group_dset$;
-/* conventional fcanf with "%s" only return the string before the first space character
-,* to read string with spaces use "%[^\n]" possible with space before or after, i.e. " %[^\n]"
-,*/
+          char* tmp_$group_dset$;
+          tmp_$group_dset$ = CALLOC(size_$group_dset$*32, char);
+          
+          for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
+            $group$->$group_dset$[i] = tmp_$group_dset$;
+            /* conventional fcanf with "%s" only return the string before the first space character
+             ,* to read string with spaces use "%[^\n]" possible with space before or after, i.e. " %[^\n]"
+             ,*/
             rc = sscanf(line, " %1023[^\n]", buffer);
             if (rc != 1) {
               trexio_s3_free_read_$group$(buffer, f, file, $group$);
               return NULL;
             }
-
+            
             size_t tmp_$group_dset$_len = strlen(buffer);
             strncpy(tmp_$group_dset$, buffer, 32);
             tmp_$group_dset$[31] = '\0';
             tmp_$group_dset$ += tmp_$group_dset$_len + 1;
           }
         }
-
-      // END REPEAT GROUP_DSET_STR
-      // START REPEAT GROUP_NUM
+        
+        // END REPEAT GROUP_DSET_STR
+        // START REPEAT GROUP_NUM
       } else if (strcmp(buffer, "$group_num$_isSet") == 0) {
         line+=strcspn(line,"\n")+1;
         unsigned int $group_num$_isSet;
@@ -415,7 +446,7 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
           trexio_s3_free_read_$group$(buffer, f, file, $group$);
           return NULL;
         }
-
+        
         if ($group$->$group_num$_isSet == true) {
           line+=strcspn(line,"\n")+1;
           rc = sscanf(line, "%1023s", buffer);
@@ -429,27 +460,27 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
             trexio_s3_free_read_$group$(buffer, f, file, $group$);
             return NULL;
           }
-
+          
         }
-
-      // END REPEAT GROUP_NUM
-      // START REPEAT GROUP_ATTR_STR
+        
+        // END REPEAT GROUP_NUM
+        // START REPEAT GROUP_ATTR_STR
       } else if (strcmp(buffer, "len_$group_str$") == 0) {
-          line+=strcspn(line,"\n")+1;
+        line+=strcspn(line,"\n")+1;
         rc = sscanf(line, "%" SCNu64 "", &($group$->len_$group_str$));
         if (rc != 1) {
           trexio_s3_free_read_$group$(buffer, f, file, $group$);
           return NULL;
         }
-          line+=strcspn(line,"\n")+1;
+        line+=strcspn(line,"\n")+1;
         rc = sscanf(line, "%1023s", buffer);
         if ((rc != 1) || (strcmp(buffer, "$group_str$") != 0)) {
           trexio_s3_free_read_$group$(buffer, f, file, $group$);
           return NULL;
         }
-
+        
         if ($group$->len_$group_str$ != 0) {
-
+          
           $group$->$group_str$ = CALLOC($group$->len_$group_str$, char);
           if ($group$->$group_str$ == NULL) {
             trexio_s3_free_read_$group$(buffer, f, file, $group$);
@@ -464,9 +495,9 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
           /* Safer string conversion to avoid buffer overflow in fscanf */
           strncpy($group$->$group_str$, buffer, $group$->len_$group_str$);
           $group$->$group_str$[$group$->len_$group_str$-1] = '\0';
-
+          
         }
-      // END REPEAT GROUP_ATTR_STR
+        // END REPEAT GROUP_ATTR_STR
       } else {
         line+=strcspn(line,"\n")+1;
         continue;
