--- a/src/templates_s3/templator_s3.org
+++ b/src/templates_s3/templator_s3.org
@@ -286,6 +286,7 @@ $group$_t*
 trexio_s3_read_$group$ (trexio_s3_t* const file)
 {
 
+
   if (file == NULL) return NULL;
 
   /* If the data structure exists, return it */
@@ -325,6 +326,7 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
     }
     
     int rc=s3_get(file->client, $group$->file_name, strlen($group$->file_name), f, sz);
+////printf("rc_s3_get_in_read_group_trexio_s3_backend=%d\n",rc);///////////////
     if(rc != 0){
       FREE(f);
       FREE($group$);
@@ -345,165 +347,236 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
     // END REPEAT GROUP_DSET_ALL
     
     char* line =f;
-    while(sscanf(line, "%1023s", buffer) != EOF) {
+    int nread = 0;
 
-      if (strcmp(buffer, "EXIT") == 0) {
-        break;
+    while(sscanf(line, "%1023s%n", buffer, &nread) != EOF) {
+	printf(":Dline1:%s:Fline1:\n", line);
+	printf("==> Mot détecté (buffer1): %s, %ld\n\n", buffer, strlen(buffer));
+        line += nread;
+	printf(":Dline1-bis:%s:Fline1-bis:\n", line);
+        
+	if (strcmp(buffer, "EXIT") == 0) {
+		printf("==> Traitement de 'exit'\n");
+       		break;
         // START REPEAT GROUP_DSET_ALL
-      } else if (strcmp(buffer, "rank_$group_dset$") == 0) {
-        line+=strcspn(line,"\n")+1;
-        rc = sscanf(line, "%u", &($group$->rank_$group_dset$));
-        if (rc != 1) {
-          trexio_s3_free_read_$group$(buffer, f, file, $group$);
-          return NULL;
-        }
+        } else if (strcmp(buffer, "rank_$group_dset$") == 0) {
+		printf("==> Traitement de 'rank_$group_dset$'\n");
+
+        	rc = sscanf(line, "%u\n%n", &($group$->rank_$group_dset$), &nread);
+
+		printf(":Dline2:%s:Fline2:\n", line);
+		printf("==> Résultat sscanf : rc = %d\n", rc);
+		printf("==> Valeur extraite : rank = %u\n", $group$->rank_$group_dset$);
+		printf("==> Nombre de caractères lus : nread = %d\n", nread);
+		printf("==> Mot détecté (buffer1 toujours): %s, %ld\n\n", buffer, strlen(buffer));
+
+        	line += nread;
+		printf(":Dline2-bis:%s:Fline2-bis:\n", line);
+        	if (rc != 1) {
+          		trexio_s3_free_read_$group$(buffer, f, file, $group$);
+         		return NULL;
+       		 }
         
-        if ($group$->rank_$group_dset$ != 0) size_$group_dset$ = 1UL;
+        	if ($group$->rank_$group_dset$ != 0) size_$group_dset$ = 1UL;
         
-        for (uint32_t i=0; i<$group$->rank_$group_dset$; ++i){
-          line+=strcspn(line,"\n")+1;
-          uint32_t j=0;
-          rc = sscanf(line, "%1023s %u", buffer, &j);
-          if ((rc != 2) || (strcmp(buffer, "dims_$group_dset$") != 0) || (j!=i)) {
-            trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            return NULL;
-          }
-          line+=strcspn(line,"\n")+1;
-          rc = sscanf(line, "%" SCNu64 "\n", &($group$->dims_$group_dset$[i]));
-          assert(!(rc != 1));
-          if (rc != 1) {
-            trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            return NULL;
-          }
+        	for (uint32_t i=0; i<$group$->rank_$group_dset$; ++i){
+        		uint32_t j=0;
+        		rc = sscanf(line, "%1023s %u\n%n", buffer, &j, &nread);
+			printf(":Dline3:%s:Fline3:\n", line);
+			printf("==> Mot détecté (buffer3): %s, %ld\n\n", buffer, strlen(buffer));
+	       		line += nread;
+			printf(":Dline3-bis:%s:Fline3-bis:\n", line);
+
+         		if ((rc != 2) || (strcmp(buffer, "dims_$group_dset$") != 0) || (j!=i)) {
+				printf("==> Traitement de 'dims_$group_dset$'\n");
+            			trexio_s3_free_read_$group$(buffer, f, file, $group$);
+            			return NULL;
+          		}
+          		rc = sscanf(line, "%" SCNu64 "\n%n", &($group$->dims_$group_dset$[i]), &nread);
+			printf(":Dline4:%s:Fline4:\n", line);
+printf("==> Résultat sscanf : rc = %d\n", rc);
+printf("==> Valeur extraite : dims = %" PRIu64 "\n", $group$->dims_$group_dset$[i]);
+printf("==> Nombre de caractères lus : nread = %d\n", nread);
+			printf("==> Mot détecté (buffer4): %s, %ld\n\n", buffer, strlen(buffer));
+
+			line += nread;
+			printf(":Dline4-bis:%s:Fline4-bis:\n", line);
+
+	        	assert(!(rc != 1));
+          		if (rc != 1) {
+           			trexio_s3_free_read_$group$(buffer, f, file, $group$);
+            			return NULL;
+          		}
           
-          size_$group_dset$ *= $group$->dims_$group_dset$[i];
-        }
+          		size_$group_dset$ *= $group$->dims_$group_dset$[i];
+       		}
         // END REPEAT GROUP_DSET_ALL
         // START REPEAT GROUP_DSET_NUM
       } else if (strcmp(buffer, "$group_dset$") == 0) {
+		printf("==> Traitement de '$group_dset$'\n");
         
         /* Allocate arrays */
-        $group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
-        if ($group$->$group_dset$ == NULL) {
-          trexio_s3_free_read_$group$(buffer, f, file, $group$);
-          return NULL;
-        }
+        	$group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
+        	if ($group$->$group_dset$ == NULL) {
+          		trexio_s3_free_read_$group$(buffer, f, file, $group$);
+          		return NULL;
+        	}
         
-        for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
-          line+=strcspn(line,"\n")+1;
-          rc = sscanf(line, "%$group_dset_format_scanf$", &($group$->$group_dset$[i]));
-          if (rc != 1) {
-            trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            return NULL;
-          }
-        }
+        	for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
+          		rc = sscanf(line, "%$group_dset_format_scanf$%n", &($group$->$group_dset$[i]), &nread);
+	  		printf(":Dline5:%s:Fline5:\n", line);
+printf("==> Résultat sscanf : rc = %d\n", rc);
+//printf("==> Valeur extraite : $group$->$group_dset$[%ld] = %PRId64\n", i, $group$->$group_dset$[i]);
+printf("==> Nombre de caractères lus : nread = %d\n", nread);
+			printf("==> Mot détecté (buffer5): %s, %ld\n\n", buffer, strlen(buffer));
+	  		line += nread;
+			printf(":Dline5:%s:Fline5:\n", line);
+          		if (rc != 1) {
+            			trexio_s3_free_read_$group$(buffer, f, file, $group$);
+            			return NULL;
+          		}
+        	}
         
         // END REPEAT GROUP_DSET_NUM
         // START REPEAT GROUP_DSET_STR
       } else if (strcmp(buffer, "$group_dset$") == 0) {
-        line+=strcspn(line,"\n")+1;
-        if (size_$group_dset$ != 0) {
+		printf("==> Traitement de '$group_dset$'\n");
+        	if (size_$group_dset$ != 0) {
           /* Allocate arrays */
-          $group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
-          if ($group$->$group_dset$ == NULL) {
-            trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            return NULL;
-          }   
+          		$group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
+          		if ($group$->$group_dset$ == NULL) {
+            			trexio_s3_free_read_$group$(buffer, f, file, $group$);
+            			return NULL;
+          		}   
           
           /* WARNING: this tmp array allows to avoid allocation of space for each element of array of string
            ,* BUT it's size has to be number_of_str*max_len_str where max_len_str is somewhat arbitrary, e.g. 32.
            ,*/
-          char* tmp_$group_dset$;
-          tmp_$group_dset$ = CALLOC(size_$group_dset$*32, char);
+         		 char* tmp_$group_dset$;
+          		 tmp_$group_dset$ = CALLOC(size_$group_dset$*32, char);
           
-          for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
-            $group$->$group_dset$[i] = tmp_$group_dset$;
+          		for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
+            			$group$->$group_dset$[i] = tmp_$group_dset$;
             /* conventional fcanf with "%s" only return the string before the first space character
              ,* to read string with spaces use "%[^\n]" possible with space before or after, i.e. " %[^\n]"
              ,*/
-            rc = sscanf(line, " %1023[^\n]", buffer);
-            if (rc != 1) {
-              trexio_s3_free_read_$group$(buffer, f, file, $group$);
-              return NULL;
-            }
+            			rc = sscanf(line, " %1023[^\n]%n", buffer, &nread);
+				printf(":Dline6:%s:Fline6:\n", line);
+				printf("==> Mot détecté (buffer6): %s, %ld\n\n", buffer, strlen(buffer));
+            			line += nread;
+				printf(":Dline6-bis:%s:Fline6-bis:\n", line);
+            			if (rc != 1) {
+              				trexio_s3_free_read_$group$(buffer, f, file, $group$);
+              				return NULL;
+            			}
             
-            size_t tmp_$group_dset$_len = strlen(buffer);
-            strncpy(tmp_$group_dset$, buffer, 32);
-            tmp_$group_dset$[31] = '\0';
-            tmp_$group_dset$ += tmp_$group_dset$_len + 1;
-          }
+            			size_t tmp_$group_dset$_len = strlen(buffer);
+            			strncpy(tmp_$group_dset$, buffer, 32);
+            			tmp_$group_dset$[31] = '\0';
+            			tmp_$group_dset$ += tmp_$group_dset$_len + 1;
+          		}
         }
         
         // END REPEAT GROUP_DSET_STR
         // START REPEAT GROUP_NUM
       } else if (strcmp(buffer, "$group_num$_isSet") == 0) {
-        line+=strcspn(line,"\n")+1;
-        unsigned int $group_num$_isSet;
+		printf("==> Traitement de '$group_num$_isSet'\n");
+        	unsigned int $group_num$_isSet;
         /* additional parameter $group_num$_isSet is needed to suppress warning when fscanf into bool variable using %u or %d */
-        rc = sscanf(line, "%u", &($group_num$_isSet));
-        $group$->$group_num$_isSet = (bool) $group_num$_isSet;
-        if (rc != 1) {
-          trexio_s3_free_read_$group$(buffer, f, file, $group$);
-          return NULL;
-        }
+        	rc = sscanf(line, "%u\n%n", &($group_num$_isSet), &nread);
+		printf(":Dline7:%s:Fline7:\n", line);
+printf("==> Résultat sscanf : rc = %d\n", rc);
+printf("==> Valeur extraite : $group_num$_isSet = %u\n", $group_num$_isSet);
+printf("==> Nombre de caractères lus : nread = %d\n", nread);
+		printf("==> Mot détecté(buffer7): %s, %ld\n\n", buffer, strlen(buffer));
+        	line += nread;
+		printf(":Dline7-bis:%s:Fline7-bis:\n", line);
+        	$group$->$group_num$_isSet = (bool) $group_num$_isSet;
+        	if (rc != 1) {
+          		trexio_s3_free_read_$group$(buffer, f, file, $group$);
+          		return NULL;
+        	}
         
-        if ($group$->$group_num$_isSet == true) {
-          line+=strcspn(line,"\n")+1;
-          rc = sscanf(line, "%1023s", buffer);
-          if ((rc != 1) || (strcmp(buffer, "$group_num$") != 0)) {
-            trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            return NULL;
-          }
-          line+=strcspn(line,"\n")+1;
-          rc = sscanf(line, "%$group_num_format_scanf$", &($group$->$group_num$));
-          if (rc != 1) {
-            trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            return NULL;
-          }
-          
-        }
+        	if ($group$->$group_num$_isSet == true) {
+          		rc = sscanf(line, "%1023s%n", buffer, &nread);
+			printf(":Dline8:%s:Fline8:\n", line);
+			printf("==> Mot détecté (buffer8): %s, %ld\n\n", buffer, strlen(buffer));
+		        line += nread;
+			printf(":Dline8-bis:%s:Fline8-bis:\n", line);
+          			if ((rc != 1) || (strcmp(buffer, "$group_num$") != 0)) {
+					printf("==> Traitement de '$group_num$'\n");
+            				trexio_s3_free_read_$group$(buffer, f, file, $group$);
+            				return NULL;
+          			}
+          			rc = sscanf(line, "%$group_num_format_scanf$%n", &($group$->$group_num$), &nread);
+				printf(":Dline9:%s:Fline9:\n", line);
+printf("==> Résultat sscanf : rc = %d\n", rc);
+printf("==> Valeur extraite : $group$->$group_num$ = %$group_num_format_scanf$\n", $group$->$group_num$);
+printf("==> Nombre de caractères lus : nread = %d\n", nread);
+				printf("==> Mot détecté (buffer9): %s, %ld\n\n", buffer, strlen(buffer));
+          			line += nread;
+				printf(":Dline9-bis:%s:Fline9-bis:\n", line);
+          		if (rc != 1) {
+            			trexio_s3_free_read_$group$(buffer, f, file, $group$);
+            			return NULL;
+          		}
+        	}
         
         // END REPEAT GROUP_NUM
         // START REPEAT GROUP_ATTR_STR
       } else if (strcmp(buffer, "len_$group_str$") == 0) {
-        line+=strcspn(line,"\n")+1;
-        rc = sscanf(line, "%" SCNu64 "", &($group$->len_$group_str$));
-        if (rc != 1) {
-          trexio_s3_free_read_$group$(buffer, f, file, $group$);
-          return NULL;
-        }
-        line+=strcspn(line,"\n")+1;
-        rc = sscanf(line, "%1023s", buffer);
-        if ((rc != 1) || (strcmp(buffer, "$group_str$") != 0)) {
-          trexio_s3_free_read_$group$(buffer, f, file, $group$);
-          return NULL;
-        }
-        
-        if ($group$->len_$group_str$ != 0) {
-          
-          $group$->$group_str$ = CALLOC($group$->len_$group_str$, char);
-          if ($group$->$group_str$ == NULL) {
-            trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            return NULL;
-          }
-          line+=strcspn(line,"\n")+1;
-          rc = sscanf(line, " %1023[^\n]", buffer);
-          if (rc != 1) {
-            trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            return NULL;
-          }
+		printf("==> Traitement de 'len_$group_str$'\n");
+        	rc = sscanf(line, "%" SCNu64 "%n", &($group$->len_$group_str$), &nread);
+		printf(":Dline10:%s:Fline10:\n", line);
+		printf("==> Mot détecté (buffer10): %s, %ld\n\n", buffer, strlen(buffer));
+        	line += nread;
+		printf(":Dline10-bis:%s:Fline10-bis:\n", line);
+        	if (rc != 1) {
+          		trexio_s3_free_read_$group$(buffer, f, file, $group$);
+          		return NULL;
+        	}
+        	rc = sscanf(line, "%1023s%n", buffer, &nread);
+		printf(":Dline11:%s:Fline11:\n", line);
+		printf("==> Mot détecté (buffer11) : %s, %ld\n\n", buffer, strlen(buffer));
+        	line += nread;
+		printf(":Dline11:%s:Fline11:\n", line);
+        	if ((rc != 1) || (strcmp(buffer, "$group_str$") != 0)) {
+			printf("==> Traitement de '$group_str$'\n");
+          		trexio_s3_free_read_$group$(buffer, f, file, $group$);
+          		return NULL;
+        	}
+        	if ($group$->len_$group_str$ != 0) {
+          		$group$->$group_str$ = CALLOC($group$->len_$group_str$, char);
+          		if ($group$->$group_str$ == NULL) {
+           			trexio_s3_free_read_$group$(buffer, f, file, $group$);
+            			return NULL;
+          		}
+          		rc = sscanf(line, " %1023[^\n]%n", buffer, &nread);
+			printf(":Dline12:%s:Fline12:\n", line);
+			printf("==> Mot détecté (buffer12): %s, %ld\n\n", buffer, strlen(buffer));
+          		line += nread;
+			printf(":Dline12-bis:%s:Fline12-bis:\n", line);
+          		if (rc != 1) {
+            			trexio_s3_free_read_$group$(buffer, f, file, $group$);
+            			return NULL;
+          		}
           /* Safer string conversion to avoid buffer overflow in fscanf */
-          strncpy($group$->$group_str$, buffer, $group$->len_$group_str$);
-          $group$->$group_str$[$group$->len_$group_str$-1] = '\0';
+          		strncpy($group$->$group_str$, buffer, $group$->len_$group_str$);
+          		$group$->$group_str$[$group$->len_$group_str$-1] = '\0';
           
-        }
+        	}
         // END REPEAT GROUP_ATTR_STR
       } else {
-        line+=strcspn(line,"\n")+1;
         continue;
       }
-      line+=strcspn(line,"\n")+1;
+        rc = sscanf(line, "%1023s%n", buffer, &nread);
+	printf(":Dline13:%s:Fline13:\n", line);
+	printf("==> Mot détecté (buffer13): %s, %ld\n\n", buffer, strlen(buffer));
+        line += nread;
+	printf(":Dline13-bis:%s:Fline13-bis:\n", line);
     }
+printf("=(buffer)=%s=(buffer)=\n", buffer);
+printf("+(line)+%s+(line)+\n", line);
 
     FREE(buffer);
     FREE(f);
@@ -524,11 +597,13 @@ trexio_exit_code trexio_s3_has_$group$(trexio_t* const file);
 trexio_exit_code
 trexio_s3_has_$group$ (trexio_t* const file)
 {
+/////printf("!!!!!!trexio_s3_has_$group$ 1\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   trexio_s3_t* s3_file=(trexio_s3_t*)file;
   /* Flush the group to make sure the group.txt file is created */
   if (file->mode != 'r') {
     trexio_exit_code rc = trexio_s3_flush_$group$(s3_file);
+/////printf("!!!!!!!!rc_trexio_s3_flush_group_in_has_group=%d\n",rc);
     if (rc != TREXIO_SUCCESS) return TREXIO_FAILURE;
   }
 
@@ -544,9 +619,11 @@ trexio_s3_has_$group$ (trexio_t* const file)
 
   if ($group$_full_path[TREXIO_MAX_FILENAME_LENGTH-1] != '\0') return TREXIO_FAILURE;
 
+////printf("!!!!!!!trexio_s3_has_$group$ 2\n");
   int file_exists;
   file_exists = s3_file_exists(s3_file->client, $group$_full_path, strlen($group$_full_path));
 
+////printf("!!!!!!trexio_s3_has_$group$ 3 %d\n", file_exists);
   if (file_exists==0) {
     return TREXIO_SUCCESS;
   } else {
@@ -772,8 +849,9 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
   buffer_size += line_len;
 
 //=== Upload final vers S3 ===
-  printf("s3_path:%s, buffer:%s, buffer_size:%ld\n",s3_path, buffer, buffer_size);
+/////  printf("s3_path:%s, buffer:%s, buffer_size:%ld\n",s3_path, buffer, buffer_size);
   int rc=s3_put(file->client, s3_path, strlen(s3_path), buffer, buffer_size);
+/////printf("rc_s3_put_in_upload_final_to_S3_trexio_backend_S3 = %d\n", rc);//////////////
   FREE(buffer);
  if(rc!=0) return TREXIO_FAILURE;
   $group$->to_flush = 0;
