--- a/src/templates_s3/templator_s3.org
+++ b/src/templates_s3/templator_s3.org
@@ -168,7 +168,6 @@ trexio_s3_inquire (const char* file_name)
       }
 
       int exists = file_exists(client, file_name);
-
       s3_disconnect(client);
 
       if (exists == 0) {
@@ -268,7 +267,6 @@ trexio_s3_flush (trexio_t* const file)
   trexio_s3_t* f = (trexio_s3_t*) file;
   trexio_exit_code rc;
   rc = trexio_s3_flush_$group$(f);   //Cette fonction va appeler s3_put()
-  printf("rc:%d (%s)\n",rc, trexio_string_of_error(rc));
   if (rc != TREXIO_SUCCESS) return rc;
 
   return TREXIO_SUCCESS;
@@ -326,7 +324,6 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
     }
     
     int rc=s3_get(file->client, $group$->file_name, strlen($group$->file_name), f, sz);
-////printf("rc_s3_get_in_read_group_trexio_s3_backend=%d\n",rc);///////////////
     if(rc != 0){
       FREE(f);
       FREE($group$);
@@ -349,30 +346,33 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
     char* line =f;
     int nread = 0;
 
+    int rc2;
+    rc = TREXIO_FAILURE;
     while(sscanf(line, "%1023s%n", buffer, &nread) != EOF) {
-	printf(":Dline1:%s:Fline1:\n", line);
-	printf("==> Mot détecté (buffer1): %s, %ld\n\n", buffer, strlen(buffer));
+//        line += nread;
+       printf(":Dline1:%s:Fline1:\n", line);
+        printf("==> Mot détecté (buffer1): %s, %ld\n\n", buffer, strlen(buffer));
         line += nread;
-	printf(":Dline1-bis:%s:Fline1-bis:\n", line);
+        printf(":Dline1-bis:%s:Fline1-bis:\n", line);
         
 	if (strcmp(buffer, "EXIT") == 0) {
 		printf("==> Traitement de 'exit'\n");
+                rc = TREXIO_SUCCESS;
        		break;
         // START REPEAT GROUP_DSET_ALL
         } else if (strcmp(buffer, "rank_$group_dset$") == 0) {
 		printf("==> Traitement de 'rank_$group_dset$'\n");
 
-        	rc = sscanf(line, "%u\n%n", &($group$->rank_$group_dset$), &nread);
-
-		printf(":Dline2:%s:Fline2:\n", line);
-		printf("==> Résultat sscanf : rc = %d\n", rc);
-		printf("==> Valeur extraite : rank = %u\n", $group$->rank_$group_dset$);
-		printf("==> Nombre de caractères lus : nread = %d\n", nread);
-		printf("==> Mot détecté (buffer1 toujours): %s, %ld\n\n", buffer, strlen(buffer));
+        	rc2 = sscanf(line, "%u\n%n", &($group$->rank_$group_dset$), &nread);
+               printf(":Dline2:%s:Fline2:\n", line);
+                printf("==> Résultat sscanf : rc2 = %d\n", rc2);
+                printf("==> Valeur extraite :  %u\n", $group$->rank_$group_dset$);
+                printf("==> Nombre de caractères lus : nread = %d\n", nread);
+                printf("==> Résultat : %s=%u\n\n", buffer, $group$->rank_$group_dset$);
 
         	line += nread;
 		printf(":Dline2-bis:%s:Fline2-bis:\n", line);
-        	if (rc != 1) {
+        	if (rc2 != 1) {
           		trexio_s3_free_read_$group$(buffer, f, file, $group$);
          		return NULL;
        		 }
@@ -381,29 +381,29 @@ trexio_s3_read_$group$ (trexio_s3_t* const file)
         
         	for (uint32_t i=0; i<$group$->rank_$group_dset$; ++i){
         		uint32_t j=0;
-        		rc = sscanf(line, "%1023s %u\n%n", buffer, &j, &nread);
+        		rc2 = sscanf(line, "%1023s %u\n%n", buffer, &j, &nread);
 			printf(":Dline3:%s:Fline3:\n", line);
-			printf("==> Mot détecté (buffer3): %s, %ld\n\n", buffer, strlen(buffer));
+                        printf("==> Mot détecté (buffer3): %s, %ld\n\n", buffer, strlen(buffer));
+
 	       		line += nread;
 			printf(":Dline3-bis:%s:Fline3-bis:\n", line);
-
-         		if ((rc != 2) || (strcmp(buffer, "dims_$group_dset$") != 0) || (j!=i)) {
+         		if ((rc2 != 2) || (strcmp(buffer, "dims_$group_dset$") != 0) || (j!=i)) {
 				printf("==> Traitement de 'dims_$group_dset$'\n");
             			trexio_s3_free_read_$group$(buffer, f, file, $group$);
             			return NULL;
           		}
-          		rc = sscanf(line, "%" SCNu64 "\n%n", &($group$->dims_$group_dset$[i]), &nread);
+          		rc2 = sscanf(line, "%" SCNu64 "\n%n", &($group$->dims_$group_dset$[i]), &nread);
+
 			printf(":Dline4:%s:Fline4:\n", line);
-printf("==> Résultat sscanf : rc = %d\n", rc);
-printf("==> Valeur extraite : dims = %" PRIu64 "\n", $group$->dims_$group_dset$[i]);
+			printf("==> Résultat sscanf : rc2 = %d\n", rc2);
+printf("==> Valeur extraite : %" PRIu64 "\n", $group$->dims_$group_dset$[i]);
 printf("==> Nombre de caractères lus : nread = %d\n", nread);
-			printf("==> Mot détecté (buffer4): %s, %ld\n\n", buffer, strlen(buffer));
+//      printf("==> Résultat : %s=%" PRIu64 "\n%n", buffer, $group$->dims_$group_dset$[i]);
 
 			line += nread;
 			printf(":Dline4-bis:%s:Fline4-bis:\n", line);
-
-	        	assert(!(rc != 1));
-          		if (rc != 1) {
+	        	assert(rc2 == 1);
+          		if (rc2 != 1) {
            			trexio_s3_free_read_$group$(buffer, f, file, $group$);
             			return NULL;
           		}
@@ -413,8 +413,7 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
         // END REPEAT GROUP_DSET_ALL
         // START REPEAT GROUP_DSET_NUM
       } else if (strcmp(buffer, "$group_dset$") == 0) {
-		printf("==> Traitement de '$group_dset$'\n");
-        
+		 printf("==> Traitement de '$group_dset$'\n");
         /* Allocate arrays */
         	$group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
         	if ($group$->$group_dset$ == NULL) {
@@ -423,15 +422,15 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
         	}
         
         	for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
-          		rc = sscanf(line, "%$group_dset_format_scanf$%n", &($group$->$group_dset$[i]), &nread);
-	  		printf(":Dline5:%s:Fline5:\n", line);
-printf("==> Résultat sscanf : rc = %d\n", rc);
+          		rc2 = sscanf(line, "%$group_dset_format_scanf$%n", &($group$->$group_dset$[i]), &nread);
+printf(":Dline5:%s:Fline5:\n", line);
+printf("==> Résultat sscanf : rc2 = %d\n", rc2);
 //printf("==> Valeur extraite : $group$->$group_dset$[%ld] = %PRId64\n", i, $group$->$group_dset$[i]);
 printf("==> Nombre de caractères lus : nread = %d\n", nread);
-			printf("==> Mot détecté (buffer5): %s, %ld\n\n", buffer, strlen(buffer));
+//      printf("==> Résultats: %s, %$group_dset_format_scanf$%n\n", buffer, $group$->$group_dset$[i]);
 	  		line += nread;
-			printf(":Dline5:%s:Fline5:\n", line);
-          		if (rc != 1) {
+                        printf(":Dline5:%s:Fline5:\n", line);
+          		if (rc2 != 1) {
             			trexio_s3_free_read_$group$(buffer, f, file, $group$);
             			return NULL;
           		}
@@ -460,12 +459,13 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
             /* conventional fcanf with "%s" only return the string before the first space character
              ,* to read string with spaces use "%[^\n]" possible with space before or after, i.e. " %[^\n]"
              ,*/
-            			rc = sscanf(line, " %1023[^\n]%n", buffer, &nread);
-				printf(":Dline6:%s:Fline6:\n", line);
-				printf("==> Mot détecté (buffer6): %s, %ld\n\n", buffer, strlen(buffer));
-            			line += nread;
-				printf(":Dline6-bis:%s:Fline6-bis:\n", line);
-            			if (rc != 1) {
+            			rc2 = sscanf(line, " %1023[^\n]%n", buffer, &nread);
+                               printf(":Dline6:%s:Fline6:\n", line);
+                                printf("==> Mot détecté (buffer6): %s, %ld\n\n", buffer, strlen(buffer));
+                                line += nread;
+                                printf(":Dline6-bis:%s:Fline6-bis:\n", line);
+
+            			if (rc2 != 1) {
               				trexio_s3_free_read_$group$(buffer, f, file, $group$);
               				return NULL;
             			}
@@ -480,100 +480,103 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
         // END REPEAT GROUP_DSET_STR
         // START REPEAT GROUP_NUM
       } else if (strcmp(buffer, "$group_num$_isSet") == 0) {
-		printf("==> Traitement de '$group_num$_isSet'\n");
+printf("==> Traitement de '$group_num$_isSet'\n");
         	unsigned int $group_num$_isSet;
         /* additional parameter $group_num$_isSet is needed to suppress warning when fscanf into bool variable using %u or %d */
-        	rc = sscanf(line, "%u\n%n", &($group_num$_isSet), &nread);
-		printf(":Dline7:%s:Fline7:\n", line);
-printf("==> Résultat sscanf : rc = %d\n", rc);
+        	rc2 = sscanf(line, "%u\n%n", &($group_num$_isSet), &nread);
+printf(":Dline7:%s:Fline7:\n", line);
+printf("==> Résultat sscanf : rc2 = %d\n", rc2);
 printf("==> Valeur extraite : $group_num$_isSet = %u\n", $group_num$_isSet);
 printf("==> Nombre de caractères lus : nread = %d\n", nread);
-		printf("==> Mot détecté(buffer7): %s, %ld\n\n", buffer, strlen(buffer));
-        	line += nread;
-		printf(":Dline7-bis:%s:Fline7-bis:\n", line);
+        //      printf("==> Résultat: %s, %u\n\n", buffer,$group_num$_isSet);
+                line += nread;
+                printf(":Dline7-bis:%s:Fline7-bis:\n", line);
+
         	$group$->$group_num$_isSet = (bool) $group_num$_isSet;
-        	if (rc != 1) {
+        	if (rc2 != 1) {
           		trexio_s3_free_read_$group$(buffer, f, file, $group$);
           		return NULL;
         	}
         
         	if ($group$->$group_num$_isSet == true) {
-          		rc = sscanf(line, "%1023s%n", buffer, &nread);
-			printf(":Dline8:%s:Fline8:\n", line);
-			printf("==> Mot détecté (buffer8): %s, %ld\n\n", buffer, strlen(buffer));
-		        line += nread;
-			printf(":Dline8-bis:%s:Fline8-bis:\n", line);
-          			if ((rc != 1) || (strcmp(buffer, "$group_num$") != 0)) {
-					printf("==> Traitement de '$group_num$'\n");
-            				trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            				return NULL;
-          			}
-          			rc = sscanf(line, "%$group_num_format_scanf$%n", &($group$->$group_num$), &nread);
-				printf(":Dline9:%s:Fline9:\n", line);
-printf("==> Résultat sscanf : rc = %d\n", rc);
+          		rc2 = sscanf(line, "%1023s%n", buffer, &nread);
+printf(":Dline8:%s:Fline8:\n", line);
+                        printf("==> Mot détecté (buffer8): %s, %ld\n\n", buffer, strlen(buffer));
+                        line += nread;
+                        printf(":Dline8-bis:%s:Fline8-bis:\n", line);
+                                if ((rc2 != 1) || (strcmp(buffer, "$group_num$") != 0)) {
+                                        printf("==> Traitement de '$group_num$'\n");
+                                        trexio_s3_free_read_$group$(buffer, f, file, $group$);
+                                        return NULL;
+                                }
+                                rc2 = sscanf(line, "%$group_num_format_scanf$%n", &($group$->$group_num$), &nread);
+                                printf(":Dline9:%s:Fline9:\n", line);
+printf("==> Résultat sscanf : rc2 = %d\n", rc2);
 printf("==> Valeur extraite : $group$->$group_num$ = %$group_num_format_scanf$\n", $group$->$group_num$);
 printf("==> Nombre de caractères lus : nread = %d\n", nread);
-				printf("==> Mot détecté (buffer9): %s, %ld\n\n", buffer, strlen(buffer));
-          			line += nread;
-				printf(":Dline9-bis:%s:Fline9-bis:\n", line);
-          		if (rc != 1) {
-            			trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            			return NULL;
+//printf("==> Résultat: %s=%$group_num_format_scanf$\n", buffer, $group$->$group_num$);
+                                line += nread;
+                                printf(":Dline9-bis:%s:Fline9-bis:\n", line);
+                        if (rc2 != 1) {
+                                trexio_s3_free_read_$group$(buffer, f, file, $group$);
+                                return NULL;
+
+
           		}
         	}
         
-        // END REPEAT GROUP_NUM
+// END REPEAT GROUP_NUM
         // START REPEAT GROUP_ATTR_STR
       } else if (strcmp(buffer, "len_$group_str$") == 0) {
-		printf("==> Traitement de 'len_$group_str$'\n");
-        	rc = sscanf(line, "%" SCNu64 "%n", &($group$->len_$group_str$), &nread);
-		printf(":Dline10:%s:Fline10:\n", line);
-		printf("==> Mot détecté (buffer10): %s, %ld\n\n", buffer, strlen(buffer));
-        	line += nread;
-		printf(":Dline10-bis:%s:Fline10-bis:\n", line);
-        	if (rc != 1) {
-          		trexio_s3_free_read_$group$(buffer, f, file, $group$);
-          		return NULL;
-        	}
-        	rc = sscanf(line, "%1023s%n", buffer, &nread);
-		printf(":Dline11:%s:Fline11:\n", line);
-		printf("==> Mot détecté (buffer11) : %s, %ld\n\n", buffer, strlen(buffer));
-        	line += nread;
-		printf(":Dline11:%s:Fline11:\n", line);
-        	if ((rc != 1) || (strcmp(buffer, "$group_str$") != 0)) {
-			printf("==> Traitement de '$group_str$'\n");
-          		trexio_s3_free_read_$group$(buffer, f, file, $group$);
-          		return NULL;
-        	}
-        	if ($group$->len_$group_str$ != 0) {
-          		$group$->$group_str$ = CALLOC($group$->len_$group_str$, char);
-          		if ($group$->$group_str$ == NULL) {
-           			trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            			return NULL;
-          		}
-          		rc = sscanf(line, " %1023[^\n]%n", buffer, &nread);
-			printf(":Dline12:%s:Fline12:\n", line);
-			printf("==> Mot détecté (buffer12): %s, %ld\n\n", buffer, strlen(buffer));
-          		line += nread;
-			printf(":Dline12-bis:%s:Fline12-bis:\n", line);
-          		if (rc != 1) {
-            			trexio_s3_free_read_$group$(buffer, f, file, $group$);
-            			return NULL;
-          		}
+                printf("==> Traitement de 'len_$group_str$'\n");
+                rc2 = sscanf(line, "%" SCNu64"\n%n", &($group$->len_$group_str$), &nread);
+                printf(":Dline10:%s:Fline10:\n", line);
+        //      printf("==>Résultat: %s=%" SCNu64 "\n%n", buffer, $group$->len_$group_str$);
+                line += nread;
+                printf(":Dline10-bis:%s:Fline10-bis:\n", line);
+                if (rc2 != 1) {
+                        trexio_s3_free_read_$group$(buffer, f, file, $group$);
+                        return NULL;
+                }
+                rc2 = sscanf(line, "%1023s%n", buffer, &nread);
+                printf(":Dline11:%s:Fline11:\n", line);
+                printf("==> Mot détecté (buffer11) : %s, %ld\n\n", buffer, strlen(buffer));
+                line += nread;
+                printf(":Dline11:%s:Fline11:\n", line);
+                if ((rc2 != 1) || (strcmp(buffer, "$group_str$") != 0)) {
+                        printf("==> Traitement de '$group_str$'\n");
+                        trexio_s3_free_read_$group$(buffer, f, file, $group$);
+                        return NULL;
+                }
+                if ($group$->len_$group_str$ != 0) {
+                        $group$->$group_str$ = CALLOC($group$->len_$group_str$, char);
+                        if ($group$->$group_str$ == NULL) {
+                                trexio_s3_free_read_$group$(buffer, f, file, $group$);
+                                return NULL;
+                        }
+                        rc2 = sscanf(line, " %1023[^\n]%n", buffer, &nread);
+                        printf(":Dline12:%s:Fline12:\n", line);
+                        printf("==> Mot détecté (buffer12): %s, %ld\n\n", buffer, strlen(buffer));
+                        line += nread;
+                        printf(":Dline12-bis:%s:Fline12-bis:\n", line);
+                        if (rc2 != 1) {
+                                trexio_s3_free_read_$group$(buffer, f, file, $group$);
+                                return NULL;
+                        }
           /* Safer string conversion to avoid buffer overflow in fscanf */
-          		strncpy($group$->$group_str$, buffer, $group$->len_$group_str$);
-          		$group$->$group_str$[$group$->len_$group_str$-1] = '\0';
-          
-        	}
+                        strncpy($group$->$group_str$, buffer, $group$->len_$group_str$);
+                        $group$->$group_str$[$group$->len_$group_str$-1] = '\0';
+
+                }
         // END REPEAT GROUP_ATTR_STR
       } else {
         continue;
       }
-        rc = sscanf(line, "%1023s%n", buffer, &nread);
-	printf(":Dline13:%s:Fline13:\n", line);
-	printf("==> Mot détecté (buffer13): %s, %ld\n\n", buffer, strlen(buffer));
-        line += nread;
-	printf(":Dline13-bis:%s:Fline13-bis:\n", line);
+        rc2 = sscanf(line, "%1023s%n", buffer, &nread);
+        printf(":Dline13:%s:Fline13:\n", line);
+        printf("==> Mot détecté (buffer13): %s, %ld\n\n", buffer, strlen(buffer));
+//        line += nread;
+        printf(":Dline13-bis:%s:Fline13-bis:\n", line);
     }
 printf("=(buffer)=%s=(buffer)=\n", buffer);
 printf("+(line)+%s+(line)+\n", line);
@@ -597,13 +600,11 @@ trexio_exit_code trexio_s3_has_$group$(trexio_t* const file);
 trexio_exit_code
 trexio_s3_has_$group$ (trexio_t* const file)
 {
-/////printf("!!!!!!trexio_s3_has_$group$ 1\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   trexio_s3_t* s3_file=(trexio_s3_t*)file;
   /* Flush the group to make sure the group.txt file is created */
   if (file->mode != 'r') {
     trexio_exit_code rc = trexio_s3_flush_$group$(s3_file);
-/////printf("!!!!!!!!rc_trexio_s3_flush_group_in_has_group=%d\n",rc);
     if (rc != TREXIO_SUCCESS) return TREXIO_FAILURE;
   }
 
@@ -619,11 +620,9 @@ trexio_s3_has_$group$ (trexio_t* const file)
 
   if ($group$_full_path[TREXIO_MAX_FILENAME_LENGTH-1] != '\0') return TREXIO_FAILURE;
 
-////printf("!!!!!!!trexio_s3_has_$group$ 2\n");
   int file_exists;
   file_exists = s3_file_exists(s3_file->client, $group$_full_path, strlen($group$_full_path));
 
-////printf("!!!!!!trexio_s3_has_$group$ 3 %d\n", file_exists);
   if (file_exists==0) {
     return TREXIO_SUCCESS;
   } else {
@@ -682,7 +681,7 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
   /* Write the dimensioning variables */
   // START REPEAT GROUP_DSET_ALL
   snprintf(line, sizeof(line), "rank_$group_dset$ %u\n", $group$->rank_$group_dset$);
-
+printf("[FLUSH1] %s", line);
   line_len=strlen(line);
 
   // === Réallocation si nécessaire ===
@@ -704,6 +703,7 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
 
   for (unsigned int i=0; i<$group$->rank_$group_dset$; ++i){
         snprintf(line, sizeof(line), "dims_$group_dset$ %u %" PRIu64 "\n", i, $group$->dims_$group_dset$[i]);
+printf("[FLUSH2] %s", line);
         line_len=strlen(line);
        // === Réallocation si nécessaire ===
         while(buffer_size + line_len >= buffer_init){
@@ -723,6 +723,7 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
 
   // START REPEAT GROUP_NUM
   snprintf(line, sizeof(line), "$group_num$_isSet %u \n", $group$->$group_num$_isSet);
+printf("[FLUSH3] %s", line);
   line_len = strlen(line);
  // === Réallocation si nécessaire ===
   while(buffer_size + line_len >= buffer_init){
@@ -739,6 +740,7 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
 
   if($group$->$group_num$_isSet==true){
         snprintf(line, sizeof(line), "$group_num$ %$group_num_format_printf$\n", $group$->$group_num$);
+printf("[FLUSH4] %s", line);
         line_len = strlen(line);
 
         // === Réallocation si nécessaire ===
@@ -758,6 +760,7 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
 
   // START REPEAT GROUP_ATTR_STR
   snprintf(line, sizeof(line), "len_$group_str$ %" PRIu64 "\n", $group$->len_$group_str$);
+printf("[FLUSH5] %s", line);
   line_len = strlen(line);
 
   // === Réallocation si nécessaire ===
@@ -774,6 +777,7 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
   buffer_size += line_len;
 
   snprintf(line, sizeof(line), "$group_str$\n");
+printf("[FLUSH6] %s", line);
   line_len = strlen(line);
 
   // === Réallocation si nécessaire ===
@@ -791,6 +795,7 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
 
   if($group$->len_$group_str$ !=0){
         snprintf(line, sizeof(line), "%s\n", $group$->$group_str$);
+printf("[FLUSH7] %s", line);
         line_len = strlen(line);
 
         // === Réallocation si nécessaire ===
@@ -814,8 +819,10 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
   // START REPEAT GROUP_DSET_ALL
 
   snprintf(line, sizeof(line), "$group_dset$\n");
+printf("[FLUSH8] %s", line);
   for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
     snprintf(line, sizeof(line), "%$group_dset_format_printf$\n", $group$->$group_dset$[i]);
+printf("[FLUSH9] %s", line);
     line_len=strlen(line);
     // === Réallocation si nécessaire ===
     while(buffer_size + line_len >= buffer_init){
@@ -834,7 +841,8 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
 
 //=== Fin du fichier ==
   snprintf(line, sizeof(line), "EXIT\n");
-  line_len=strlen(line)+1;  // +1 to include terminating '\0'
+printf("[FLUSH10] %s", line);
+  line_len=strlen(line); 
   // === Réallocation si nécessaire ===
   while(buffer_size + line_len >= buffer_init){
     buffer_init *=2;
@@ -849,9 +857,9 @@ trexio_s3_flush_$group$ (trexio_s3_t* const file)
   buffer_size += line_len;
 
 //=== Upload final vers S3 ===
-/////  printf("s3_path:%s, buffer:%s, buffer_size:%ld\n",s3_path, buffer, buffer_size);
+  printf("s3_path:%s, buffer:%s, buffer_size:%ld\n",s3_path, buffer, buffer_size);
   int rc=s3_put(file->client, s3_path, strlen(s3_path), buffer, buffer_size);
-/////printf("rc_s3_put_in_upload_final_to_S3_trexio_backend_S3 = %d\n", rc);//////////////
+printf("rc_s3_put_in_upload_final_to_S3_trexio_backend_S3 = %d\n", rc);//////////////
   FREE(buffer);
  if(rc!=0) return TREXIO_FAILURE;
   $group$->to_flush = 0;
@@ -1076,40 +1084,81 @@ trexio_s3_write_$group_dset$ (trexio_t* const file, const $group_dset_dtype$* $g
                                 const uint32_t rank, const uint64_t* dims)
 {
 
-  if (file  == NULL)  return TREXIO_INVALID_ARG_1;
-  if ($group_dset$ == NULL)  return TREXIO_INVALID_ARG_2;
-  if (rank < 1) return TREXIO_INVALID_ARG_3;
-  if (dims == NULL) return TREXIO_INVALID_ARG_4;
+//  if (file  == NULL)  return TREXIO_INVALID_ARG_1;
+  if (file  == NULL){
+	printf("Erreur1 : File ==NULL\n");
+	  return TREXIO_INVALID_ARG_1;
+  }
 
-  if (file->mode == 'r') return TREXIO_READONLY;
+//  if ($group_dset$ == NULL)  return TREXIO_INVALID_ARG_2;
+  if ($group_dset$ == NULL){
+	printf("Erreur2: $group_dset$==NULL\n");
+	return TREXIO_INVALID_ARG_2;
+  }
+//  if (rank < 1) return TREXIO_INVALID_ARG_3;
+  if (rank < 1){
+	printf("Erreur3: rank<1 (%u)\n", rank);
+	return TREXIO_INVALID_ARG_3;
+  }
+//  if (dims == NULL) return TREXIO_INVALID_ARG_4;
+  if (dims == NULL){
+	printf("Erreur4: dims == NULL\n");
+	return TREXIO_INVALID_ARG_4;
+  }
+
+//  if (file->mode == 'r') return TREXIO_READONLY;
+  if (file->mode == 'r'){
+	printf("Erreur5: fichier en mode lecture uniquement\n");
+	return TREXIO_READONLY;
+  }
 
 //  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
 
   trexio_s3_t* s3_file=(trexio_s3_t*) file;
-  if(s3_file==NULL) return TREXIO_INVALID_ARG_1;
-
-  $group$_t* const $group$ = trexio_s3_read_$group$(s3_file);
-  if ($group$ == NULL) return TREXIO_FAILURE;
-
-  if ($group$->$group_dset$ != NULL) {
-    FREE($group$->$group_dset$);
+//  if(s3_file==NULL) return TREXIO_INVALID_ARG_1;
+  if (s3_file == NULL) {
+    printf("Erreur6: s3_file == NULL\n");
+    return TREXIO_INVALID_ARG_1;
   }
 
+  $group$_t* const $group$ = trexio_s3_read_$group$(s3_file);
+//  if ($group$ == NULL) return TREXIO_FAILURE;
+
+  if ($group$ == NULL) {
+    printf("Erreur7: $group$ == NULL après trexio_s3_read_$group$\n");
+    return TREXIO_FAILURE;
+  }
+
+  if ($group$->$group_dset$ != NULL) {
+    printf("Libération de l'ancien tableau %s\n", "$group_dset$");
+    FREE($group$->$group_dset$);
+  }
+printf("Initialisation de rank = %u\n", rank);
   $group$->rank_$group_dset$ = rank;
 
   uint64_t dim_size = 1;
   for (uint32_t i=0; i<$group$->rank_$group_dset$; ++i){
     $group$->dims_$group_dset$[i] = dims[i];
     dim_size *= dims[i];
+printf("dims[%u] = %" PRIu64 "\n", i, dims[i]);
   }
+printf("Taille totale à allouer = %" PRIu64 "\n", dim_size);
 
   $group$->$group_dset$ = CALLOC(dim_size, $group_dset_dtype$);
 
+ if ($group$->$group_dset$ == NULL) {                           //
+    printf("Erreur d'allocation mémoire pour $group_dset$\n");  //
+    return TREXIO_FAILURE;                                      //
+  }                                                             //
+
   for (uint64_t i=0 ; i<dim_size ; ++i) {
     $group$->$group_dset$[i] = $group_dset$[i];
+printf("Copie %s[%" PRIu64 "] = ...\n", "$group_dset$", i);  // Ajoute une valeur réelle si possible
   }
-
+printf("Marquage to_flush = 1 pour $group$\n");
   $group$->to_flush = 1;
+
+printf("Écriture dans $group$ terminée avec succès.\n");
   return TREXIO_SUCCESS;
 
 }
@@ -1156,28 +1205,37 @@ trexio_s3_read_$group_dset$ (trexio_t* const file, char* const dset, const uint3
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if (dset == NULL) return TREXIO_INVALID_ARG_2;
 
-//  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
-
-  if(rank < 1) return TREXIO_INVALID_ARG_3;
-  if(dims == NULL) return TREXIO_INVALID_ARG_4;
-
-  trexio_s3_t* s3_file=(trexio_s3_t*) file;
-  if(s3_file==NULL) return TREXIO_INVALID_ARG_1;
-
-  $group$_t* const $group$ = trexio_s3_read_$group$(s3_file);
+  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
   if ($group$ == NULL) return TREXIO_FAILURE;
+printf("[DEBUG1] rank demandé: %u, rank enregistré: %u\n", rank, $group$->rank_$group_dset$);
 
-  if (rank != $group$->rank_$group_dset$) return TREXIO_INVALID_ARG_3;
-
+  if (rank != $group$->rank_$group_dset$){
+printf("[ERROR] Rank mismatch: attendu %u, trouvé %u\n", rank, $group$->rank_$group_dset$);
+return TREXIO_INVALID_ARG_3;
+}
   for (uint32_t i=0 ; i<rank ; ++i) {
-    if (dims[i] != $group$->dims_$group_dset$[i]) return TREXIO_INVALID_ARG_4;
-  }
+printf("[DEBUG2] dims[%u] = %" PRIu64 ", dims_in_file[%u] = %" PRIu64 "\n",
+           i, dims[i], i, $group$->dims_$group_dset$[i]);
+
+    if (dims[i] != $group$->dims_$group_dset$[i]){ 
+      printf("[ERROR] Dimension mismatch at dim %u\n", i);
+      return TREXIO_INVALID_ARG_4;
+    }
+
+   }
+  printf("[DEBUG3] max_str_len = %u\n", max_str_len);
+  printf("[DEBUG4] Lecture des chaînes de caractères...\n");
+
 
   strcpy(dset, "");
+printf("[DEBUG4.1] Adresse du tableau de chaînes: %p\n", (void*) $group$->$group_dset$);
   for (uint64_t i=0 ; i<dims[0] ; ++i) {
+ printf("[DEBUG5] i = %" PRIu64 ", label = '%s'\n", i, $group$->$group_dset$[i]);
     strncat(dset, $group$->$group_dset$[i], max_str_len);
     strcat(dset, TREXIO_DELIM);
   }
+  printf("[DEBUG6] Contenu final dset = \"%s\"\n", dset);
+  printf("=== [DEBUG7] Sortie de trexio_s3_read_$group_dset$ ===\n");
 
   return TREXIO_SUCCESS;
 
@@ -1189,63 +1247,57 @@ trexio_exit_code
 trexio_s3_write_$group_dset$ (trexio_t* const file, const char** dset, const uint32_t rank, const uint64_t* dims)
 {
 
-  if (file  == NULL)  return TREXIO_INVALID_ARG_1;
+ if (file  == NULL)  return TREXIO_INVALID_ARG_1;
   if (dset == NULL)  return TREXIO_INVALID_ARG_2;
-  if (dims == NULL)  return TREXIO_INVALID_ARG_4;
 
   if (file->mode == 'r') return TREXIO_READONLY;
+printf("[INFO]  Ecriture ou allocation du $group_dset$\n");
+printf("[INFO] Lecture ou allocation du groupe $group$\n");
 
-//  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
-
-  trexio_s3_t* s3_file=(trexio_s3_t*) file;
-  if(s3_file==NULL) return TREXIO_INVALID_ARG_1;
-
-  $group$_t* const $group$ = trexio_s3_read_$group$(s3_file);
+  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
   if ($group$ == NULL) return TREXIO_FAILURE;
 
   if ($group$->$group_dset$ != NULL) {
-    if ($group$->rank_$group_dset$ != 0 && $group$->$group_dset$[0] != NULL){
-	 FREE($group$->$group_dset$[0]);
- 	 FREE($group$->$group_dset$);
-     }
+printf("[INFO] Libération de l'ancien tableau $group_dset$\n");
+    if ($group$->rank_$group_dset$ != 0) FREE($group$->$group_dset$[0]);
+    FREE($group$->$group_dset$);
   }
 
   $group$->rank_$group_dset$ = rank;
+printf("[INFO] Rank = %u\n", rank);
 
   for (uint32_t i=0; i<$group$->rank_$group_dset$; ++i){
     $group$->dims_$group_dset$[i] = dims[i];
+printf("[INFO] dims[%u] = %" PRIu64 "\n", i, dims[i]);
   }
 
   $group$->$group_dset$ = CALLOC(dims[0], char*);
-  if ($group$->$group_dset$ == NULL) return TREXIO_ALLOCATION_FAILED;
-
-  char* tmp_str = CALLOC(dims[0]*32 + 1, char);
-  if (tmp_str == NULL) return TREXIO_ALLOCATION_FAILED;
-
+  if ($group$->$group_dset$ == NULL){
+    printf("[ERREUR] Allocation échouée pour $group_dset$\n");
+    return TREXIO_ALLOCATION_FAILED;
+  }
+size_t total_buffer = dims[0]*32 + 1;
+  char* tmp_str = CALLOC(total_buffer, char);
+  if (tmp_str == NULL){
+    printf("[ERREUR] Allocation échouée pour le buffer temporaire de %zu octets\n", total_buffer);
+    return TREXIO_ALLOCATION_FAILED;
+  }
+  printf("[INFO] Allocation du buffer temporaire réussie (%zu octets)\n", total_buffer);
   for (uint64_t i=0 ; i<dims[0] ; ++i) {
-//    size_t tmp_len = strlen(dset[i])+1;
-//    $group$->$group_dset$[i] = tmp_str;
-//    strncpy(tmp_str, dset[i], tmp_len);
-//    tmp_str[tmp_len-1] = '\0';
-//    tmp_str += tmp_len + 1;
-
-       size_t tmp_len=strlen(dset[i])+1;
-       $group$->$group_dset$[i]=CALLOC(tmp_len, char);
-        if($group$->$group_dset$[i] == NULL){
-                for(uint64_t j=0; j<i; ++j){
-                        FREE($group$->$group_dset$[j]);
-                }
-                FREE($group$->$group_dset$);
-                $group$->$group_dset$ = NULL;
-                return TREXIO_ALLOCATION_FAILED;
-        }
-        strncpy($group$->$group_dset$[i], dset[i], tmp_len);
-
+    size_t tmp_len = strlen(dset[i])+1;
+printf("[INFO] dset[%" PRIu64 "] = '%s' (longueur = %zu)\n", i, dset[i], tmp_len);
+    $group$->$group_dset$[i] = tmp_str;
+    strncpy(tmp_str, dset[i], tmp_len);
+    tmp_str[tmp_len-1] = '\0';
+    tmp_str += tmp_len + 1;
   }
 
   $group$->to_flush = 1;
+printf("[INFO] Marquage du groupe $group$ pour flush (to_flush = 1)\n");
+printf("[SUCCESS] Écriture dans $group_dset$ terminée avec succès\n");
 
   return TREXIO_SUCCESS;
+
 
 }
    #+end_src
@@ -1260,17 +1312,18 @@ trexio_s3_has_$group_dset$ (trexio_t* const file)
 //  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
 
   trexio_s3_t* s3_file=(trexio_s3_t*) file;
+  if(s3_file==NULL) return TREXIO_INVALID_ARG_1;
+
   $group$_t* const $group$ = trexio_s3_read_$group$(s3_file);
-
   if ($group$ == NULL) return TREXIO_FAILURE;
-
-  if ($group$->rank_$group_dset$ > 0 && $group$->$group_dset$ != NULL){
+  if ($group$->rank_$group_dset$ > 0){
     return TREXIO_SUCCESS;
   } else {
     return TREXIO_HAS_NOT;
   }
 
 }
+
    #+end_src
 * Template for has/read/write a string attribute
 
@@ -1288,17 +1341,12 @@ trexio_s3_read_$group_str$ (trexio_t* const file, char* const str, const uint32_
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if (str == NULL) return TREXIO_INVALID_ARG_2;
 
-//  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
-
-  trexio_s3_t* s3_file=(trexio_s3_t*) file;
-  if (s3_file == NULL) return TREXIO_INVALID_ARG_1;
-
-  $group$_t* const $group$ = trexio_s3_read_$group$(s3_file);
+  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
   if ($group$ == NULL) return TREXIO_FAILURE;
 
   strncpy(str, $group$->$group_str$, max_str_len);
   str[max_str_len-1] = '\0';
-
+printf("string attribute :%s\n", $group$->$group_str$);
   return TREXIO_SUCCESS;
 
 }
@@ -1314,12 +1362,7 @@ trexio_s3_write_$group_str$ (trexio_t* const file, const char *str)
 
   if (file->mode == 'r') return TREXIO_READONLY;
 
-//  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
-
-  trexio_s3_t* s3_file=(trexio_s3_t*) file;
-  if (s3_file == NULL) return TREXIO_INVALID_ARG_1;
- 
-  $group$_t* const $group$ = trexio_s3_read_$group$(s3_file);
+  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
   if ($group$ == NULL) return TREXIO_FAILURE;
 
   if ($group$->$group_str$ != NULL) FREE($group$->$group_str$);
@@ -1348,10 +1391,7 @@ trexio_s3_has_$group_str$ (trexio_t* const file)
 
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
-  trexio_s3_t* s3_file=(trexio_s3_t*) file;
-  if (s3_file == NULL) return TREXIO_INVALID_ARG_1;
-
-  $group$_t* const $group$ = trexio_s3_read_$group$(s3_file);
+  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
   if ($group$ == NULL) return TREXIO_FAILURE;
 
   if ($group$->len_$group_str$ > 0){
@@ -1406,14 +1446,13 @@ trexio_s3_t* s3_file=(trexio_s3_t*) file;
   strncat (file_full_path, $group_dset$_file_name,
            TREXIO_MAX_FILENAME_LENGTH-strlen($group_dset$_file_name));
 
-  /* Open the file in "a" (append) mode to guarantee that no truncation happens upon consecutive writes */
-  FILE* f = fopen(file_full_path, "a");
-  if (f == NULL) return TREXIO_FILE_ERROR;
-
   /* Specify the line length in order to offset properly. For example, for 4-index quantities
      the line_length is 69 because 10 per index + 4 spaces + 24 for floating point value + 1 for the new line char.
      CURRENTLY NO OFFSET IS USED WHEN WRITING !
     ,*/
+  FILE* f = fopen(file_full_path, "a");
+  if (f == NULL) return TREXIO_FILE_ERROR;
+
   (void) offset_file; // Avoid unused variable error
   
   int64_t line_length = 0L;
