--- a/src/templates_s3/templator_s3.org
+++ b/src/templates_s3/templator_s3.org
@@ -95,7 +95,7 @@ typedef struct $group$_s {
     #+end_src
 
 
-* Template for general structure in text back end
+* Template for general structure in s3 back end
 
    Polymorphism of the ~trexio_t~ type is handled by ensuring that the
    corresponding types for all back ends can be safely casted to
@@ -106,8 +106,7 @@ typedef struct $group$_s {
 typedef struct trexio_s3_s {
   trexio_t   parent ;
   $group$_t* $group$;
-//  int        lock_file;
-  trexio_s3_client* client; //Pointeur vers la connexion S3 NOZHA SAFI
+  trexio_s3_client* client; //Pointeur vers la connexion S3 
   char s3_bucket_name[TREXIO_MAX_FILENAME_LENGTH]; //Nom du bucket S3
 } trexio_s3_t;
     #+end_src
@@ -262,7 +261,6 @@ trexio_s3_deinit (trexio_t* const file)
 trexio_exit_code
 trexio_s3_flush (trexio_t* const file)
 {
-printf("===== Début de trexio_s3_flush ======\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
   trexio_s3_t* f = (trexio_s3_t*) file;
@@ -284,8 +282,6 @@ $group$_t* trexio_s3_read_$group$(trexio_s3_t* const file);
 $group$_t*
 trexio_s3_read_$group$ (trexio_s3_t* const file)
 {
-
-printf("===== Début de trexio_s3_read_group ======\n");
 
   if (file == NULL) return NULL;
 
@@ -352,28 +348,15 @@ printf("===== Début de trexio_s3_read_group ======\n");
     rc = TREXIO_FAILURE;
     while(sscanf(line, "%1023s%n", buffer, &nread) != EOF) {
 //        line += nread;
-       printf(":Dline1:%s:Fline1:\n", line);
-        printf("==> Mot détecté (buffer1): %s, %ld\n\n", buffer, strlen(buffer));
         line += nread;
-        printf(":Dline1-bis:%s:Fline1-bis:\n", line);
-        
 	if (strcmp(buffer, "EXIT") == 0) {
-		printf("==> Traitement de 'exit'\n");
                 rc = TREXIO_SUCCESS;
        		break;
         // START REPEAT GROUP_DSET_ALL
         } else if (strcmp(buffer, "rank_$group_dset$") == 0) {
-		printf("==> Traitement de 'rank_$group_dset$'\n");
 
         	rc2 = sscanf(line, "%u\n%n", &($group$->rank_$group_dset$), &nread);
-               printf(":Dline2:%s:Fline2:\n", line);
-                printf("==> Résultat sscanf : rc2 = %d\n", rc2);
-                printf("==> Valeur extraite :  %u\n", $group$->rank_$group_dset$);
-                printf("==> Nombre de caractères lus : nread = %d\n", nread);
-                printf("==> Résultat : %s=%u\n\n", buffer, $group$->rank_$group_dset$);
-
         	line += nread;
-		printf(":Dline2-bis:%s:Fline2-bis:\n", line);
         	if (rc2 != 1) {
           		trexio_s3_free_read_$group$(buffer, f, file, $group$);
          		return NULL;
@@ -384,24 +367,12 @@ printf("===== Début de trexio_s3_read_group ======\n");
         	for (uint32_t i=0; i<$group$->rank_$group_dset$; ++i){
         		uint32_t j=0;
         		rc2 = sscanf(line, "%1023s %u\n%n", buffer, &j, &nread);
-			printf(":Dline3:%s:Fline3:\n", line);
-                        printf("==> Mot détecté (buffer3): %s, %ld\n\n", buffer, strlen(buffer));
-
 	       		line += nread;
-			printf(":Dline3-bis:%s:Fline3-bis:\n", line);
          		if ((rc2 != 2) || (strcmp(buffer, "dims_$group_dset$") != 0) || (j!=i)) {
-				printf("==> Traitement de 'dims_$group_dset$'\n");
             			trexio_s3_free_read_$group$(buffer, f, file, $group$);
             			return NULL;
           		}
           		rc2 = sscanf(line, "%" SCNu64 "\n%n", &($group$->dims_$group_dset$[i]), &nread);
-
-			printf(":Dline4:%s:Fline4:\n", line);
-			printf("==> Résultat sscanf : rc2 = %d\n", rc2);
-printf("==> Valeur extraite : %" PRIu64 "\n", $group$->dims_$group_dset$[i]);
-printf("==> Nombre de caractères lus : nread = %d\n", nread);
-//      printf("==> Résultat : %s=%" PRIu64 "\n%n", buffer, $group$->dims_$group_dset$[i]);
-
 			line += nread;
 			printf(":Dline4-bis:%s:Fline4-bis:\n", line);
 	        	assert(rc2 == 1);
@@ -415,7 +386,6 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
         // END REPEAT GROUP_DSET_ALL
         // START REPEAT GROUP_DSET_NUM
       } else if (strcmp(buffer, "$group_dset$") == 0) {
-		 printf("==> Traitement de '$group_dset$'\n");
         /* Allocate arrays */
         	$group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
         	if ($group$->$group_dset$ == NULL) {
@@ -425,13 +395,7 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
         
         	for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
           		rc2 = sscanf(line, "%$group_dset_format_scanf$%n", &($group$->$group_dset$[i]), &nread);
-printf(":Dline5:%s:Fline5:\n", line);
-printf("==> Résultat sscanf : rc2 = %d\n", rc2);
-//printf("==> Valeur extraite : $group$->$group_dset$[%ld] = %PRId64\n", i, $group$->$group_dset$[i]);
-printf("==> Nombre de caractères lus : nread = %d\n", nread);
-//      printf("==> Résultats: %s, %$group_dset_format_scanf$%n\n", buffer, $group$->$group_dset$[i]);
 	  		line += nread;
-                        printf(":Dline5:%s:Fline5:\n", line);
           		if (rc2 != 1) {
             			trexio_s3_free_read_$group$(buffer, f, file, $group$);
             			return NULL;
@@ -441,10 +405,8 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
         // END REPEAT GROUP_DSET_NUM
         // START REPEAT GROUP_DSET_STR
       } else if (strcmp(buffer, "$group_dset$") == 0) {
-                        printf("==> Traitement de '$group_dset$'\n");
                 if (size_$group_dset$ != 0) {
           /* Allocate arrays */
-printf("DEBUG: allocation de $group_dset$ pour %lu chaines\n", size_$group_dset$);
                         $group$->$group_dset$ = CALLOC(size_$group_dset$, $group_dset_dtype$);
 
 
@@ -463,7 +425,9 @@ if (!$group$->$group_dset$) {
            ,* BUT it's size has to be number_of_str*max_len_str where max_len_str is somewhat arbitrary, e.g. 32.
            ,*/
                          char* tmp_$group_dset$;
+                         char* tmp_$group_dset$_0;
                          tmp_$group_dset$ = CALLOC(size_$group_dset$*32, char);
+                         tmp_$group_dset$_0 = tmp_$group_dset$;
 
 
                if (tmp_$group_dset$ == NULL) {
@@ -480,14 +444,10 @@ if (!$group$->$group_dset$) {
              ,* to read string with spaces use "%[^\n]" possible with space before or after, i.e. " %[^\n]"
              ,*/
                                 rc2 = sscanf(line, " %1023[^\n]%n", buffer, &nread);
-                               printf(":Dline6:%s:Fline6:\n", line);
-                                printf("==> Mot détecté (buffer6): %s, %ld\n\n", buffer, strlen(buffer));
                                 line += nread;
-                                printf(":Dline6-bis:%s:Fline6-bis:\n", line);
 
                                 if (rc2 != 1) {
-					FREE(tmp_$group_dset$);
-					FREE($group$->$group_dset$);
+					FREE(tmp_$group_dset$_0);
                                         trexio_s3_free_read_$group$(buffer, f, file, $group$);
                                         return NULL;
                                 }
@@ -500,17 +460,10 @@ if (!$group$->$group_dset$) {
         // END REPEAT GROUP_DSET_STR
         // START REPEAT GROUP_NUM
       } else if (strcmp(buffer, "$group_num$_isSet") == 0) {
-printf("==> Traitement de '$group_num$_isSet'\n");
         	unsigned int $group_num$_isSet;
         /* additional parameter $group_num$_isSet is needed to suppress warning when fscanf into bool variable using %u or %d */
         	rc2 = sscanf(line, "%u\n%n", &($group_num$_isSet), &nread);
-printf(":Dline7:%s:Fline7:\n", line);
-printf("==> Résultat sscanf : rc2 = %d\n", rc2);
-printf("==> Valeur extraite : $group_num$_isSet = %u\n", $group_num$_isSet);
-printf("==> Nombre de caractères lus : nread = %d\n", nread);
-        //      printf("==> Résultat: %s, %u\n\n", buffer,$group_num$_isSet);
                 line += nread;
-                printf(":Dline7-bis:%s:Fline7-bis:\n", line);
 
         	$group$->$group_num$_isSet = (bool) $group_num$_isSet;
         	if (rc2 != 1) {
@@ -520,23 +473,13 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
         
         	if ($group$->$group_num$_isSet == true) {
           		rc2 = sscanf(line, "%1023s%n", buffer, &nread);
-printf(":Dline8:%s:Fline8:\n", line);
-                        printf("==> Mot détecté (buffer8): %s, %ld\n\n", buffer, strlen(buffer));
                         line += nread;
-                        printf(":Dline8-bis:%s:Fline8-bis:\n", line);
                                 if ((rc2 != 1) || (strcmp(buffer, "$group_num$") != 0)) {
-                                        printf("==> Traitement de '$group_num$'\n");
                                         trexio_s3_free_read_$group$(buffer, f, file, $group$);
                                         return NULL;
                                 }
                                 rc2 = sscanf(line, "%$group_num_format_scanf$%n", &($group$->$group_num$), &nread);
-                                printf(":Dline9:%s:Fline9:\n", line);
-printf("==> Résultat sscanf : rc2 = %d\n", rc2);
-printf("==> Valeur extraite : $group$->$group_num$ = %$group_num_format_scanf$\n", $group$->$group_num$);
-printf("==> Nombre de caractères lus : nread = %d\n", nread);
-//printf("==> Résultat: %s=%$group_num_format_scanf$\n", buffer, $group$->$group_num$);
                                 line += nread;
-                                printf(":Dline9-bis:%s:Fline9-bis:\n", line);
                         if (rc2 != 1) {
                                 trexio_s3_free_read_$group$(buffer, f, file, $group$);
                                 return NULL;
@@ -548,21 +491,14 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
 // END REPEAT GROUP_NUM
         // START REPEAT GROUP_ATTR_STR
       } else if (strcmp(buffer, "len_$group_str$") == 0) {
-                printf("==> Traitement de 'len_$group_str$'\n");
                 rc2 = sscanf(line, "%" SCNu64"\n%n", &($group$->len_$group_str$), &nread);
-                printf(":Dline10:%s:Fline10:\n", line);
-        //      printf("==>Résultat: %s=%" SCNu64 "\n%n", buffer, $group$->len_$group_str$);
                 line += nread;
-                printf(":Dline10-bis:%s:Fline10-bis:\n", line);
                 if (rc2 != 1) {
                         trexio_s3_free_read_$group$(buffer, f, file, $group$);
                         return NULL;
                 }
                 rc2 = sscanf(line, "%1023s%n", buffer, &nread);
-                printf(":Dline11:%s:Fline11:\n", line);
-                printf("==> Mot détecté (buffer11) : %s, %ld\n\n", buffer, strlen(buffer));
                 line += nread;
-                printf(":Dline11-bis:%s:Fline11-bis:\n", line);
                 if ((rc2 != 1) || (strcmp(buffer, "$group_str$") != 0)) {
                         printf("==> Traitement de '$group_str$'\n");
                         trexio_s3_free_read_$group$(buffer, f, file, $group$);
@@ -575,10 +511,7 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
                                 return NULL;
                         }
                         rc2 = sscanf(line, " %1023[^\n]%n", buffer, &nread);
-                        printf(":Dline12:%s:Fline12:\n", line);
-                        printf("==> Mot détecté (buffer12): %s, %ld\n\n", buffer, strlen(buffer));
                         line += nread;
-                        printf(":Dline12-bis:%s:Fline12-bis:\n", line);
                         if (rc2 != 1) {
                                 trexio_s3_free_read_$group$(buffer, f, file, $group$);
                                 return NULL;
@@ -593,13 +526,7 @@ printf("==> Nombre de caractères lus : nread = %d\n", nread);
         continue;
       }
         rc2 = sscanf(line, "%1023s%n", buffer, &nread);
-        printf(":Dline13:%s:Fline13:\n", line);
-        printf("==> Mot détecté (buffer13): %s, %ld\n\n", buffer, strlen(buffer));
-//        line += nread;
-        printf(":Dline13-bis:%s:Fline13-bis:\n", line);
     }
-printf("=(buffer)=%s=(buffer)=\n", buffer);
-printf("+(line)+%s+(line)+\n", line);
 
     FREE(buffer);
     FREE(f);
@@ -620,7 +547,6 @@ trexio_exit_code trexio_s3_has_$group$(trexio_t* const file);
 trexio_exit_code
 trexio_s3_has_$group$ (trexio_t* const file)
 {
-printf("===== Début de trexio_s3_has_group ======\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   trexio_s3_t* s3_file=(trexio_s3_t*)file;
   /* Flush the group to make sure the group.txt file is created */
@@ -662,7 +588,6 @@ trexio_exit_code trexio_s3_flush_$group$(trexio_s3_t* const file);
 trexio_exit_code
 trexio_s3_flush_$group$ (trexio_s3_t* const file)
 {
-printf("======== Début de trexio_s3_fulsh_group ========\n");
   if (file == NULL) return TREXIO_INVALID_ARG_1;
 
   if (file->parent.mode == 'r') return TREXIO_READONLY;
@@ -702,7 +627,6 @@ printf("======== Début de trexio_s3_fulsh_group ========\n");
   /* Write the dimensioning variables */
   // START REPEAT GROUP_DSET_ALL
   snprintf(line, sizeof(line), "rank_$group_dset$ %u\n", $group$->rank_$group_dset$);
-printf("[FLUSH1] %s", line);
   line_len=strlen(line);
 
   // === Réallocation si nécessaire ===
@@ -724,7 +648,6 @@ printf("[FLUSH1] %s", line);
 
   for (unsigned int i=0; i<$group$->rank_$group_dset$; ++i){
         snprintf(line, sizeof(line), "dims_$group_dset$ %u %" PRIu64 "\n", i, $group$->dims_$group_dset$[i]);
-printf("[FLUSH2] %s", line);
         line_len=strlen(line);
        // === Réallocation si nécessaire ===
         while(buffer_size + line_len >= buffer_init){
@@ -744,7 +667,6 @@ printf("[FLUSH2] %s", line);
 
   // START REPEAT GROUP_NUM
   snprintf(line, sizeof(line), "$group_num$_isSet %u \n", $group$->$group_num$_isSet);
-printf("[FLUSH3] %s", line);
   line_len = strlen(line);
  // === Réallocation si nécessaire ===
   while(buffer_size + line_len >= buffer_init){
@@ -761,7 +683,6 @@ printf("[FLUSH3] %s", line);
 
   if($group$->$group_num$_isSet==true){
         snprintf(line, sizeof(line), "$group_num$ %$group_num_format_printf$\n", $group$->$group_num$);
-printf("[FLUSH4] %s", line);
         line_len = strlen(line);
 
         // === Réallocation si nécessaire ===
@@ -781,7 +702,6 @@ printf("[FLUSH4] %s", line);
 
   // START REPEAT GROUP_ATTR_STR
   snprintf(line, sizeof(line), "len_$group_str$ %" PRIu64 "\n", $group$->len_$group_str$);
-printf("[FLUSH5] %s", line);
   line_len = strlen(line);
 
   // === Réallocation si nécessaire ===
@@ -798,7 +718,6 @@ printf("[FLUSH5] %s", line);
   buffer_size += line_len;
 
   snprintf(line, sizeof(line), "$group_str$\n");
-printf("[FLUSH6] %s", line);
   line_len = strlen(line);
 
   // === Réallocation si nécessaire ===
@@ -816,7 +735,6 @@ printf("[FLUSH6] %s", line);
 
   if($group$->len_$group_str$ !=0){
         snprintf(line, sizeof(line), "%s\n", $group$->$group_str$);
-printf("[FLUSH7] %s", line);
         line_len = strlen(line);
 
         // === Réallocation si nécessaire ===
@@ -841,7 +759,6 @@ printf("[FLUSH7] %s", line);
 
   snprintf(line, sizeof(line), "$group_dset$\n");
   line_len = strlen(line);
-printf("[FLUSH8] %s", line);
   //=== Réallocation si nécessaire ===
    while(buffer_size + line_len >= buffer_init){
         buffer_init *=2;
@@ -856,9 +773,7 @@ printf("[FLUSH8] %s", line);
     buffer_size += line_len;
 
   for (uint64_t i=0 ; i<size_$group_dset$ ; ++i) {
-//    printf("$group$->$group_dset$[i]: %$group_dset_format_printf$\n");
     snprintf(line, sizeof(line), "%$group_dset_format_printf$\n", $group$->$group_dset$[i]);
-printf("[FLUSH9] %s", line);
     line_len=strlen(line);
     // === Réallocation si nécessaire ===
     while(buffer_size + line_len >= buffer_init){
@@ -877,7 +792,6 @@ printf("[FLUSH9] %s", line);
 
 //=== Fin du fichier ==
   snprintf(line, sizeof(line), "EXIT\n");
-printf("[FLUSH10] %s", line);
   line_len=strlen(line); 
   // === Réallocation si nécessaire ===
   while(buffer_size + line_len >= buffer_init){
@@ -893,9 +807,7 @@ printf("[FLUSH10] %s", line);
   buffer_size += line_len;
 
 //=== Upload final vers S3 ===
-  printf("s3_path:%s, buffer:%s, buffer_size:%ld\n",s3_path, buffer, buffer_size);
   int rc=s3_put(file->client, s3_path, strlen(s3_path), buffer, buffer_size);
-printf("rc_s3_put_in_upload_final_to_S3_trexio_backend_S3 = %d\n", rc);//////////////
   FREE(buffer);
  if(rc!=0) return TREXIO_FAILURE;
   $group$->to_flush = 0;
@@ -1006,7 +918,6 @@ trexio_exit_code trexio_s3_write_$group_num$(trexio_t* const file, const $group_
 trexio_exit_code
 trexio_s3_read_$group_num$ (trexio_t* const file, $group_num_dtype_double$* const num)
 {
-printf("======== Debut de trexio_s3_read_group_num =====\n");
 
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if (num   == NULL) return TREXIO_INVALID_ARG_2;
@@ -1084,7 +995,6 @@ trexio_exit_code
 trexio_s3_read_$group_dset$ (trexio_t* const file, $group_dset_dtype$* const $group_dset$,
                                const uint32_t rank, const uint64_t* dims)
 {
-printf("=========Début de trexio_s3_read_group_dset ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if ($group_dset$ == NULL) return TREXIO_INVALID_ARG_2;
   if (rank < 1) return TREXIO_INVALID_ARG_3;
@@ -1120,41 +1030,27 @@ trexio_exit_code
 trexio_s3_write_$group_dset$ (trexio_t* const file, const $group_dset_dtype$* $group_dset$,
                                 const uint32_t rank, const uint64_t* dims)
 {
-printf("==== Début de trexio_s3_group_dset =====\n");
-//  if (file  == NULL)  return TREXIO_INVALID_ARG_1;
   if (file  == NULL){
-	printf("Erreur1 : File ==NULL\n");
 	  return TREXIO_INVALID_ARG_1;
   }
 
-//  if ($group_dset$ == NULL)  return TREXIO_INVALID_ARG_2;
   if ($group_dset$ == NULL){
-	printf("Erreur2: $group_dset$==NULL\n");
 	return TREXIO_INVALID_ARG_2;
   }
-//  if (rank < 1) return TREXIO_INVALID_ARG_3;
   if (rank < 1){
-	printf("Erreur3: rank<1 (%u)\n", rank);
 	return TREXIO_INVALID_ARG_3;
   }
-//  if (dims == NULL) return TREXIO_INVALID_ARG_4;
   if (dims == NULL){
-	printf("Erreur4: dims == NULL\n");
 	return TREXIO_INVALID_ARG_4;
   }
 
-//  if (file->mode == 'r') return TREXIO_READONLY;
   if (file->mode == 'r'){
-	printf("Erreur5: fichier en mode lecture uniquement\n");
 	return TREXIO_READONLY;
   }
 
-//  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
 
   trexio_s3_t* s3_file=(trexio_s3_t*) file;
-//  if(s3_file==NULL) return TREXIO_INVALID_ARG_1;
   if (s3_file == NULL) {
-    printf("Erreur6: s3_file == NULL\n");
     return TREXIO_INVALID_ARG_1;
   }
 
@@ -1162,29 +1058,23 @@ printf("==== Début de trexio_s3_group_dset =====\n");
 //  if ($group$ == NULL) return TREXIO_FAILURE;
 
   if ($group$ == NULL) {
-    printf("Erreur7: $group$ == NULL après trexio_s3_read_$group$\n");
     return TREXIO_FAILURE;
   }
 
   if ($group$->$group_dset$ != NULL) {
-    printf("Libération de l'ancien tableau %s\n", "$group_dset$");
     FREE($group$->$group_dset$);
   }
-printf("Initialisation de rank = %u\n", rank);
   $group$->rank_$group_dset$ = rank;
 
   uint64_t dim_size = 1;
   for (uint32_t i=0; i<$group$->rank_$group_dset$; ++i){
     $group$->dims_$group_dset$[i] = dims[i];
     dim_size *= dims[i];
-printf("dims[%u] = %" PRIu64 "\n", i, dims[i]);
   }
-printf("Taille totale à allouer = %" PRIu64 "\n", dim_size);
 
   $group$->$group_dset$ = CALLOC(dim_size, $group_dset_dtype$);
 
  if ($group$->$group_dset$ == NULL) {                           //
-    printf("Erreur d'allocation mémoire pour $group_dset$\n");  //
     return TREXIO_FAILURE;                                      //
   }                                                             //
 
@@ -1192,10 +1082,8 @@ printf("Taille totale à allouer = %" PRIu64 "\n", dim_size);
     $group$->$group_dset$[i] = $group_dset$[i];
 printf("Copie %s[%" PRIu64 "] = ...\n", "$group_dset$", i);  // Ajoute une valeur réelle si possible
   }
-printf("Marquage to_flush = 1 pour $group$\n");
   $group$->to_flush = 1;
 
-printf("Écriture dans $group$ terminée avec succès.\n");
   return TREXIO_SUCCESS;
 
 }
@@ -1206,7 +1094,6 @@ trexio_exit_code
 trexio_s3_has_$group_dset$ (trexio_t* const file)
 {
 
-printf("=========Début de trexio_s3_has_group_dset ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
   //$group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
@@ -1240,21 +1127,16 @@ trexio_exit_code
 trexio_s3_read_$group_dset$ (trexio_t* const file, char* const dset, const uint32_t rank, const uint64_t* dims, const uint32_t max_str_len)
 {
 
-printf("=========Début de trexio_s3_read_group_dset dataset of strings ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if (dset == NULL) return TREXIO_INVALID_ARG_2;
 
   $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
   if ($group$ == NULL) return TREXIO_FAILURE;
-printf("[DEBUG1] rank demandé: %u, rank enregistré: %u\n", rank, $group$->rank_$group_dset$);
 
   if (rank != $group$->rank_$group_dset$){
-printf("[ERROR] Rank mismatch: attendu %u, trouvé %u\n", rank, $group$->rank_$group_dset$);
 return TREXIO_INVALID_ARG_3;
 }
   for (uint32_t i=0 ; i<rank ; ++i) {
-printf("[DEBUG2] dims[%u] = %" PRIu64 ", dims_in_file[%u] = %" PRIu64 "\n",
-           i, dims[i], i, $group$->dims_$group_dset$[i]);
 
     if (dims[i] != $group$->dims_$group_dset$[i]){ 
       printf("[ERROR] Dimension mismatch at dim %u\n", i);
@@ -1262,23 +1144,16 @@ printf("[DEBUG2] dims[%u] = %" PRIu64 ", dims_in_file[%u] = %" PRIu64 "\n",
     }
 
    }
-  printf("[DEBUG3] max_str_len = %u\n", max_str_len);
-  printf("[DEBUG4] Lecture des chaînes de caractères...\n");
 
 
   strcpy(dset, "");
-printf("[DEBUG4.1] Adresse du tableau de chaînes: %p\n", (void*) $group$->$group_dset$);
 if ($group$->$group_dset$ == NULL) {
-    printf("[ERREUR] $group_dset$ est toujours NULL !\n");
     return TREXIO_FAILURE; // On sort proprement
 }
   for (uint64_t i=0 ; i<dims[0] ; ++i) {
- printf("[DEBUG5] i = %" PRIu64 ", label = '%s'\n", i, $group$->$group_dset$[i]);
     strncat(dset, $group$->$group_dset$[i], max_str_len);
     strcat(dset, TREXIO_DELIM);
   }
-  printf("[DEBUG6] Contenu final dset = \"%s\"\n", dset);
-  printf("=== [DEBUG7] Sortie de trexio_s3_read_$group_dset$ ===\n");
 
   return TREXIO_SUCCESS;
 
@@ -1290,46 +1165,36 @@ trexio_exit_code
 trexio_s3_write_$group_dset$ (trexio_t* const file, const char** dset, const uint32_t rank, const uint64_t* dims)
 {
 
-printf("=========Début de trexio_s3_write_group_dset dataset of strings ========\n");
  if (file  == NULL)  return TREXIO_INVALID_ARG_1;
   if (dset == NULL)  return TREXIO_INVALID_ARG_2;
 
   if (file->mode == 'r') return TREXIO_READONLY;
-printf("[INFO]  Ecriture ou allocation du $group_dset$\n");
-printf("[INFO] Lecture ou allocation du groupe $group$\n");
 
   $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
   if ($group$ == NULL) return TREXIO_FAILURE;
 
   if ($group$->$group_dset$ != NULL) {
-printf("[INFO] Libération de l'ancien tableau $group_dset$\n");
     if ($group$->rank_$group_dset$ != 0) FREE($group$->$group_dset$[0]);
     FREE($group$->$group_dset$);
   }
 
   $group$->rank_$group_dset$ = rank;
-printf("[INFO] Rank = %u\n", rank);
 
   for (uint32_t i=0; i<$group$->rank_$group_dset$; ++i){
     $group$->dims_$group_dset$[i] = dims[i];
-printf("[INFO] dims[%u] = %" PRIu64 "\n", i, dims[i]);
   }
 
   $group$->$group_dset$ = CALLOC(dims[0], char*);
   if ($group$->$group_dset$ == NULL){
-    printf("[ERREUR] Allocation échouée pour $group_dset$\n");
     return TREXIO_ALLOCATION_FAILED;
   }
 size_t total_buffer = dims[0]*32 + 1;
   char* tmp_str = CALLOC(total_buffer, char);
   if (tmp_str == NULL){
-    printf("[ERREUR] Allocation échouée pour le buffer temporaire de %zu octets\n", total_buffer);
     return TREXIO_ALLOCATION_FAILED;
   }
-  printf("[INFO] Allocation du buffer temporaire réussie (%zu octets)\n", total_buffer);
   for (uint64_t i=0 ; i<dims[0] ; ++i) {
     size_t tmp_len = strlen(dset[i])+1;
-printf("[INFO] dset[%" PRIu64 "] = '%s' (longueur = %zu)\n", i, dset[i], tmp_len);
     $group$->$group_dset$[i] = tmp_str;
     strncpy(tmp_str, dset[i], tmp_len);
     tmp_str[tmp_len-1] = '\0';
@@ -1337,8 +1202,6 @@ printf("[INFO] dset[%" PRIu64 "] = '%s' (longueur = %zu)\n", i, dset[i], tmp_len
   }
 
   $group$->to_flush = 1;
-printf("[INFO] Marquage du groupe $group$ pour flush (to_flush = 1)\n");
-printf("[SUCCESS] Écriture dans $group_dset$ terminée avec succès\n");
 
   return TREXIO_SUCCESS;
 
@@ -1351,7 +1214,6 @@ trexio_exit_code
 trexio_s3_has_$group_dset$ (trexio_t* const file)
 {
 
-printf("=========Début de trexio_s3_has_group_dset dataset of strings ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
 //  $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
@@ -1383,7 +1245,6 @@ trexio_exit_code
 trexio_s3_read_$group_str$ (trexio_t* const file, char* const str, const uint32_t max_str_len)
 {
 
-printf("=========Début de trexio_s3_read_group_dset string attribute  ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
   if (str == NULL) return TREXIO_INVALID_ARG_2;
 
@@ -1392,7 +1253,6 @@ printf("=========Début de trexio_s3_read_group_dset string attribute  ========\
 
   strncpy(str, $group$->$group_str$, max_str_len);
   str[max_str_len-1] = '\0';
-printf("string attribute :%s\n", $group$->$group_str$);
   return TREXIO_SUCCESS;
 
 }
@@ -1403,7 +1263,6 @@ trexio_exit_code
 trexio_s3_write_$group_str$ (trexio_t* const file, const char *str)
 {
 
-printf("=========Début de trexio_s3_write_group_dset string attribute  ========\n");
   if (file == NULL) return TREXIO_INVALID_ARG_1;
   if (str  == NULL) return TREXIO_INVALID_ARG_2;
 
@@ -1436,7 +1295,6 @@ trexio_exit_code
 trexio_s3_has_$group_str$ (trexio_t* const file)
 {
 
-printf("=========Début de trexio_s3_has_group_dset string attribute  ========\n");
   if (file  == NULL) return TREXIO_INVALID_ARG_1;
 
   $group$_t* const $group$ = trexio_s3_read_$group$((trexio_s3_t*) file);
